<resources>
    <string name="app_name">Movies</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="photo_movie">Photo Movie</string>
    <string name="the_movies_splash">The Movies</string>
    <string name="search_here">Search here...</string>
    <string name="error_internet">Please Check your Acces with the internet!</string>
    <string name="title_the_moive">Title the Moive</string>
    <string name="title_aux">O Lunático</string>
    <string name="overview">Overview</string>
    <string name="string_dump">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos.</string>
    <string name="release_date">Release Date</string>
    <string name="date_dump">15/05/2018</string>
    <string name="vote_avarege">Vote Avarege</string>
    <string name="original_title">Original Title</string>
    <string name="string_dump_oneLine">One Line</string>
    <string name="warning_key_api">Opss, where yout api key</string>
    <string name="warning_fetch_data">Opss Fetching Data! ...</string>
    <string name="errror_try_catch">Try latter, please...</string>
    <string name="wait_please">Fetching Movies, please waiting...</string>
    <string name="backPopularMovie">Press Back go to Popular Movie</string>
    <string name="title_popular">Popular Movie</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="up_coming">Up Coming</string>
    <string name="title_upcoming">Up Coming</string>
    <string name="back">Back</string>
    <string name="opss">Ops, nothing, sorry...</string>
    <string name="found">I found</string>
    <string name="result">result(s)</string>
    <string name="popularity">popularity</string>
    <string name="error_data">Opss missing some data, try later...</string>
    <string name="default_waring">Oh god, I don\'t know what happen.. sorry</string>
    <string name="my_fovorite_movie_s">My Fovorite Movie(s)</string>
    <string name="others_information">Others Information</string>
    <string name="reviews">Reviews</string>
    <string name="fail_upload">Opss, fail to upload trailers</string>
    <string name="click_to_see">Click to see</string>
    <string name="trailers">Trailers</string>
    <string name="swipe_to_left_or_right_for_see_more">swipe to left or right for see more</string>
    <string name="click_for_read_a_complete_review">Click for read a complete review</string>
    <string name="author">author</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="yepInserMovie">Yep is in  favorite now</string>
    <string name="alreadyMovie">Already in favorite</string>
    <string name="removedMovie">Removed!</string>
    <string name="removeMovie">Remove Favorite Movie</string>
    <string name="messegeRemove">Do you want remove this movie?</string>
    <string name="yep">Yes</string>
    <string name="no">No</string>
    <string name="click_favorite">You don\'t have favorite movies, click for 1 second in a movie, for this</string>
    <string name="you_don_t_have_any_facorite_movie">You don\'t have any facorite movie...</string>
    <string name="insert_ok">Yep, The movie is favorite now</string>
    <string name="my_favorite_movie_s">My Favorite Movie(s)</string>
    <string name="title_activity_detail_movie">Detail Movie</string>
    <string name="deleted">The movie has deleted</string>
    <string name="myFavorite">My Favorite Movies</string>
    <string name="fail">Failed to asynchronously load data</string>
    <string name="anyMovie">You don\'t have any favorite movie. :)</string>
    <string name="this_is_your_favorite_movie">This is your favorite movie</string>


</resources>
