<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ic_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="1"
        android:title="@string/search_here"
        app:showAsAction="never" />

    <item
        android:id="@+id/ic_coming"
        android:orderInCategory="2"
        android:title="@string/up_coming"
        app:showAsAction="never" />

    <item
        android:id="@+id/ic_top_rated"
        android:orderInCategory="3"
        android:title="@string/top_rated"
        app:showAsAction="never" />

    <item
        android:id="@+id/ic_popular"
        android:orderInCategory="4"
        android:title="@string/popular"
        app:showAsAction="never" />


    <item
        android:id="@+id/ic_favorite"
        android:orderInCategory="3"
        android:title="@string/favorite"
        app:showAsAction="never" />

</menu>