<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp" >

    <LinearLayout
        android:id="@+id/trailer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center|center_vertical"

            android:gravity="center_vertical|center"
            android:maxLines="2"
            android:padding="8dp"
            android:text="@string/string_dump"
            android:textColor="@color/background_main_blue" />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableBottom="@android:drawable/ic_media_play"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/click_to_see"
            android:textColor="@color/background_main_blue" />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/swipe_to_left_or_right_for_see_more"
            android:textColor="@color/background_main_blue"/>
    </LinearLayout>
</android.support.v7.widget.CardView>







