<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_color_menu_item"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:gravity="center_vertical|center"
                android:padding="8dp"
                android:maxLines="3"
                android:text="@string/string_dump"
                android:textColor="@color/background_main_blue" />

            <TextView
                android:id="@+id/tv_author"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:padding="10dp"
                android:text="@string/author"
                android:textColor="@color/background_main_blue" />

            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/click_for_read_a_complete_review"
                android:textColor="@color/background_main_blue" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
